# sderl

./: .gitignore  README.md  setup.cfg
data/hjb-pde/: SDE_Double_Well_1.0_1_1e-02.npz  SDE_Double_Well_2.0_1_1e-02.npz  x_upde_1d.npy
scripts/: sbatch_script_template.sh
src/sderl/ac/: ac2_agent.py  ac_agent.py  ac_td_residual.py  agent_ac2.py  run_ac_sde.py
src/sderl/cem/: cem_agent.py  cem_agent_jax.py  cem_agent_sp.py  cem_sde.py  run_cem_sde.py  run_cem_sde_jax.py
src/sderl/ddpg/: ddpg.py  ddpg_agent.py  ddpg_agent_jax.py  ddpg_jax.py  networks.py  networks_jax.py  run_ddpg_butane.py  run_ddpg_sde.py  sde_ddpg.py  utils.py
src/sderl/hjb/: hjb_solver_1d.py  run_hjb_solver_sde_1d.py
src/sderl/reinforce/: agent_reinforce.py  main_reinforce.py  networks.py  normalized_actions.py  reinforce_agent.py  reinforce_agent_jax.py  reinforce_butan.py  reinforce_continuous.py  reinforce_sde.py  run_reinforce_sde.py  run_reinforce_sde_batch.py  visual_reinforce.py  visual_reinforce_sde.py
src/sderl/reinforce_traj/: agent_reinforce2.py  reinforce_sde_traj.py
src/sderl/soc/: networks.py  networks_jax.py  run_soc_sde.py  run_soc_sde_batch.py  soc_agent.py  soc_agent_jax.py  utils.py  visual_soc.py  visual_soc_sde.py  visual_soc_sde_batch.py  visual_soc_sde_batch_jax.py
src/sderl/soc/src/: run_soc_sde.py  soc_agent.py  utils.py  visual_soc_sde.py
src/sderl/utils/: config.py  make_folder.py  scaler.py
src/sderl/utils/data_1d/: u_pde_1d.npy
