[metadata]
name = sderl
version = 0.1.0
author = Jannes Quer 
author_email = j.quer@fu-berlin.de
description = A package to simulate molecules following the overdamped Lagevin equation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jannes002A/sderl
project_urls =
    Bug Tracker = https://github.com/jannes002A/sderl/issues
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
   gym
   jax
   jaxlib
   matplotlib
   numpy
   pandas
   scipy
   sklearn
   optax
   torch

[options.extras_require]
test = pytest

[options.packages.find]
where = src
